--- a/web+msyql+phpmyadmin/docker-compose2.yml
+++ b/web+msyql+phpmyadmin/docker-compose2.yml
@@ -6,6 +6,8 @@ services:
   web: 
     image:  php:7.1-apache
     restart: always
+    volumes: 
+      - ./volumes/app:/app
     ports:
       - "80:80"
     networks:
