--- a/mysql_phpmyadmin/docker-compose.yml
+++ b/mysql_phpmyadmin/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     command:
       --max_allowed_packet=1000M
       --sql-mode=NO_AUTO_VALUE_ON_ZERO  
+      #--secure_file_priv = ''：不做任何限制，可以隨意的 Import 或 Export。
     # Connect to "my-network" network, as defined below
     networks:
       - my-network
