--- a/Ubuntu/docker-compose.yml
+++ b/Ubuntu/docker-compose.yml
@@ -3,8 +3,7 @@ version: "3.7"
 # Define services/containers
 services:
     myos:
-      build:
-        context: ./dockerfile
+      build: .
       networks:
         - ubuntu-network
 
