--- a/Ubuntu/docker-compose.yml
+++ b/Ubuntu/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
     myos:
-      image: ubuntu:16.04      
+      image: "ubuntu:16.04"
       
 #      networks:
 #        - ubuntu-network
