--- a/Ubuntu/docker-compose.yml
+++ b/Ubuntu/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.7"
 services:
     myos:
       image: "ubuntu:16.04"
-      
+      tty : true
 #      networks:
 #        - ubuntu-network
 
