--- a/Ubuntu/docker-compose.yml
+++ b/Ubuntu/docker-compose.yml
@@ -14,3 +14,6 @@ services:
 #        source: ./config/master.cnf
 #        target: /etc/mysql/conf.d/master.cnf
 
+##### 資料夾對應
+#  volumes:
+#      - .:/code
